--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,7 +19,8 @@ body,
 #root {
   height: 100%;
   min-height: 100%;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 #root {
